--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="сss/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/thinline.css"
@@ -30,8 +30,20 @@
                   <li><a class="link" href="">projects()</a></li>
                   <li><a class="link" href="">skills() </a></li>
                   <li><a class="link" href="">contact() </a></li>
-                  <li><a class="link__social" href="">git</a></li>
-                  <li><a class="link__social" href="">inst</a></li>
+                  <li>
+                    <a
+                      class="link__social"
+                      href="https://github.com/BohdanNikolaychuk"
+                      >git</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="link__social"
+                      href="https://www.instagram.com/bohdan.nikolaychuk/"
+                      >inst</a
+                    >
+                  </li>
                 </ul>
               </nav>
             </div>
@@ -86,7 +98,6 @@
         </section>
       </div>
     </div>
-<<<<<<< HEAD
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"
       integrity="sha512-gSf3NCgs6wWEdztl1e6vUqtRP884ONnCNzCpomdoQ0xXsk06lrxJsR7jX5yM/qAGkPGsps+4bLV5IEjhOZX+gg=="
@@ -94,8 +105,5 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="js/main.js"></script>
-=======
-    <script src="/js/main.js"></script>
->>>>>>> 68ba292bac6db23f4ac3c1f9da0d2ccc87566b02
   </body>
 </html>
