"add progress bars,corrected some mistake"

--- a/index.html
+++ b/index.html
@@ -50,13 +50,32 @@
             </div>
             <section class="main">
               <h2 class="main__title">.frontend developer()</h2>
-              <p class="main__text">.i'm creative developer from Ukraine()</p>
-              <a class="main__btn"><>.my CV</a>
+              <p class="main__text">
+                .Hi,my name is Bohdan <br />
+                .i am creative developer from Ukraine()
+              </p>
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/bohdan-nikolaychuk-97a705224/"
+                class="main__btn"
+                ><>.my CV</a
+              >
             </section>
           </div>
           <div class="arrow__btm">
-            <p class="arrow__text">scroll</p>
-            <div class="arrow">----></div>
+            <p class="arrow__text">scroll down</p>
+            <!-- <div class="arrow">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M0 7.33l2.829-2.83 9.175 9.339 9.167-9.339 2.829 2.83-11.996 12.17z"
+                />
+              </svg>
+            </div> -->
           </div>
         </header>
       </div>
@@ -80,6 +99,32 @@
           <div class="container">
             <div class="skil__inner">
               <h4 class="skill__title">.skills()</h4>
+              <div class="container__litle">
+                <div class="progress_item">
+                  <h3 class="skill__title-text">HTML, CSS</h3>
+                  <div class="progress">
+                    <div class="progress__bar"></div>
+                  </div>
+                </div>
+                <div class="progress_item">
+                  <h3 class="skill__title-text">Javascript</h3>
+                  <div class="progress">
+                    <div class="progress__bar"></div>
+                  </div>
+                </div>
+                <div class="progress_item">
+                  <h3 class="skill__title-text">Figma, Ps</h3>
+                  <div class="progress">
+                    <div class="progress__bar"></div>
+                  </div>
+                </div>
+                <div class="progress_item">
+                  <h3 class="skill__title-text">Frameworks</h3>
+                  <div class="progress">
+                    <div class="progress__bar"></div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
