--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="arrow__btm">
             <p class="arrow__text">scroll down</p>
             
-              <img class="arrow" src="/img/scroll.png" alt="" />
+              <img class="arrow" src="img/scroll.png" alt="" />
         </header>
       </div>
       <div class="section">
