add contact form,correct some mistake

--- a/index.html
+++ b/index.html
@@ -32,17 +32,23 @@
                   <li><a class="link" href="">skills() </a></li>
                   <li><a class="link" href="">contact() </a></li>
                   <li>
-                    <a
+                    <a target="_blank"
                       class="link__social"
                       href="https://github.com/BohdanNikolaychuk"
                       >git</a
                     >
                   </li>
                   <li>
-                    <a
+                    <a target="_blank"
                       class="link__social"
                       href="https://www.instagram.com/bohdan.nikolaychuk/"
                       >inst</a
+                    >
+                    <li>
+                    <a target="_blank"
+                      class="link__social"
+                      href="https://www.linkedin.com/in/bohdan-nikolaychuk-97a705224/"
+                      >linkedin</a
                     >
                   </li>
                 </ul>
@@ -64,19 +70,8 @@
           </div>
           <div class="arrow__btm">
             <p class="arrow__text">scroll down</p>
-            <!-- <div class="arrow">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  d="M0 7.33l2.829-2.83 9.175 9.339 9.167-9.339 2.829 2.83-11.996 12.17z"
-                />
-              </svg>
-            </div> -->
-          </div>
+            
+              <img class="arrow" src="/img/scroll.png" alt="" />
         </header>
       </div>
       <div class="section">
@@ -87,6 +82,10 @@
               <div class="project__items">
                 <div class="project__item1">123</div>
                 <div class="project__item2">3123</div>
+                <div class="project__item3">123</div>
+                <div class="project__item4">3123</div>
+                <div class="project__item3">123</div>
+                <div class="project__item4">3123</div>
                 <div class="project__item3">123</div>
                 <div class="project__item4">3123</div>
               </div>
@@ -135,9 +134,10 @@
             <div class="contact__inner">
               <h5 class="contact__title">.contact me()</h5>
               <form class="form" action="">
-                <input type="text" />
-                <input type="text" />
-                <input type="text" />
+                <input class="form__text" type="text" placeholder="your name" />
+                <input class="form__text" type="email" placeholder="your email"/>
+                <textarea class="form__text" name="" id="" cols="30" rows="10"></textarea>
+                <input  type="submit" class="main__btn" value="<>.send">
               </form>
             </div>
           </div>
