--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="сss/reset.css" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link
@@ -70,8 +69,6 @@
           </div>
           <div class="arrow__btm">
             <p class="arrow__text">scroll down</p>
-            
-              <img class="arrow" src="/img/scroll.png" alt="" />
         </header>
       </div>
       <div class="section">
@@ -80,14 +77,30 @@
             <div class="project__inner">
               <h4 class="projetct__title">.projects()</h4>
               <div class="project__items">
-                <div class="project__item1">123</div>
-                <div class="project__item2">3123</div>
-                <div class="project__item3">123</div>
-                <div class="project__item4">3123</div>
-                <div class="project__item3">123</div>
-                <div class="project__item4">3123</div>
-                <div class="project__item3">123</div>
-                <div class="project__item4">3123</div>
+                <div class="project__item">
+                  <a class="project__item-link" target="_blank" href="https://bohdannikolaychuk.github.io/CarsharingLviv_PetProject/"><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                </div>
+                <div class="project__item">
+                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                </div>
+                <div class="project__item">
+                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                </div>
+                <div class="project__item">
+                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                </div>
+                <div class="project__item">
+                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                </div>
+              <div class="project__item">
+                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                </div>
+              <div class="project__item">
+                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                </div>
+<div class="project__item">
+                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                </div>
               </div>
             </div>
           </div>
@@ -134,10 +147,10 @@
             <div class="contact__inner">
               <h5 class="contact__title">.contact me()</h5>
               <form class="form" action="">
-                <input class="form__text" type="text" placeholder="your name" />
-                <input class="form__text" type="email" placeholder="your email"/>
-                <textarea class="form__text" name="" id="" cols="30" rows="10"></textarea>
-                <input  type="submit" class="main__btn" value="<>.send">
+                <input class="form__text _req" type="text" placeholder=".your name"  />
+                <input class="form__text _req" type="email" placeholder=".your email"/>
+                <textarea class="form__text _req" name="" id="" cols="30" rows="10"></textarea>
+                <button type="submit" class="main__btn" ><>.send</button>
               </form>
             </div>
           </div>
