--- a/index.html
+++ b/index.html
@@ -83,25 +83,25 @@
                   <a class="project__item-link" target="_blank" href="https://bohdannikolaychuk.github.io/CarsharingLviv_PetProject/"><img class="project__item-img" src="/img/123.jpg" alt=""></a>
                 </div>
                 <div class="project__item">
-                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                  <a class="project__item-link" href=""><img class="project__item-img" src="img/123.jpg" alt=""></a>
                 </div>
                 <div class="project__item">
-                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                  <a class="project__item-link" href=""><img class="project__item-img" src="img/123.jpg" alt=""></a>
                 </div>
                 <div class="project__item">
-                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                  <a class="project__item-link" href=""><img class="project__item-img" src="img/123.jpg" alt=""></a>
                 </div>
                 <div class="project__item">
-                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                  <a class="project__item-link" href=""><img class="project__item-img" src="img/123.jpg" alt=""></a>
                 </div>
               <div class="project__item">
-                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                  <a class="project__item-link" href=""><img class="project__item-img" src="img/123.jpg" alt=""></a>
                 </div>
               <div class="project__item">
-                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                  <a class="project__item-link" href=""><img class="project__item-img" src="img/123.jpg" alt=""></a>
                 </div>
 <div class="project__item">
-                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                  <a class="project__item-link" href=""><img class="project__item-img" src="img/123.jpg" alt=""></a>
                 </div>
               </div>
             </div>
