--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </nav>
             </div>
             <section class="main">
-              <h2 class="main__title">.frontend developer()</h2>
+              <h2 class="main__title">.frontend developer<span class="purpe__span">()</span></h2>
               <p class="main__text">
                 .Hi,my name is Bohdan <br />
                 .i am creative developer from Ukraine()
@@ -69,15 +69,13 @@
           </div>
           <div class="arrow__btm">
             <p class="arrow__text">scroll down</p>
-           
-              <img class="arrow" src="img/scroll.png" alt="" />
         </header>
       </div>
       <div class="section">
         <section class="project">
           <div class="container">
             <div class="project__inner">
-              <h4 class="projetct__title">.projects()</h4>
+              <h4 class="projetct__title title">.projects<span class="purpe__span">()</span></h4>
               <div class="project__items">
                 <div class="project__item">
                   <a class="project__item-link" target="_blank" href="https://bohdannikolaychuk.github.io/CarsharingLviv_PetProject/"><img class="project__item-img" src="/img/123.jpg" alt=""></a>
@@ -94,15 +92,6 @@
                 <div class="project__item">
                   <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
                 </div>
-              <div class="project__item">
-                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
-                </div>
-              <div class="project__item">
-                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
-                </div>
-<div class="project__item">
-                  <a class="project__item-link" href=""><img class="project__item-img" src="/img/123.jpg" alt=""></a>
-                </div>
               </div>
             </div>
           </div>
@@ -112,7 +101,7 @@
         <section class="skill">
           <div class="container">
             <div class="skil__inner">
-              <h4 class="skill__title">.skills()</h4>
+              <h4 class="skill__title title">.skills<span class="purpe__span">()</span></h4>
               <div class="container__litle">
                 <div class="progress_item">
                   <h3 class="skill__title-text">HTML, CSS</h3>
@@ -147,7 +136,7 @@
         <section class="contact">
           <div class="container">
             <div class="contact__inner">
-              <h5 class="contact__title">.contact me()</h5>
+              <h5 class="contact__title title">.contact me<span class="purpe__span">()</span></h5>
               <form class="form" action="">
                 <input class="form__text _req" type="text" placeholder=".your name"  />
                 <input class="form__text _req" type="email" placeholder=".your email"/>
