--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" /> 
     <link
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/thinline.css"
@@ -19,8 +19,6 @@
     <title>MY</title>
   </head>
   <body>
-    <div id="fullPage">
-      <div class="section">
         <header class="header">
           <div class="container">
             <div class="header__inner">
@@ -53,7 +51,10 @@
                 </ul>
               </nav>
             </div>
-            <section class="main">
+          </header>
+          <div class="main slide">
+            <div class="container">
+              <div class="main__inner">
               <h2 class="main__title">.frontend developer<span class="purpe__span">()</span></h2>
               <p class="main__text">
                 .Hi,my name is Bohdan <br />
@@ -63,97 +64,21 @@
                 target="_blank"
                 href="https://www.linkedin.com/in/bohdan-nikolaychuk-97a705224/"
                 class="main__btn"
-                ><>.my CV</a
-              >
-            </section>
-          </div>
-          <div class="arrow__btm">
-            <p class="arrow__text">scroll down</p>
-        </header>
-      </div>
-      <div class="section">
-        <section class="project">
-          <div class="container">
-            <div class="project__inner">
-              <h4 class="projetct__title title">.projects<span class="purpe__span">()</span></h4>
-              <div class="project__items">
-                <div class="slide">
-                <div class="project__item">
-                  <a class="project__item-link" target="_blank" href="https://bohdannikolaychuk.github.io/CarsharingLviv_PetProject/"><img class="project__item-img" src="/img/123.jpg" alt=""></a>
+                ><>.my CV</a>
                 </div>
-                </div>
-                <div class="slide">
-                <div class="project__item">
-                  <a class="project__item-link" href=""><img class="project__item-img" src="img/123.jpg" alt=""></a>
-                </div>
-                </div>
-                <div class="slide">
-                <div class="project__item">
-                  <a class="project__item-link" href=""><img class="project__item-img" src="img/123.jpg" alt=""></a>
-                </div>
-                </div>
-                    <div class="slide">
-                <div class="project__item">
-                  <a class="project__item-link" href=""><img class="project__item-img" src="img/123.jpg" alt=""></a>
-                </div>
-                </div>
-             
               </div>
             </div>
-          </div>
-        </section>
-      </div>
-      <div class="section">
-        <section class="skill">
-          <div class="container">
-            <div class="skil__inner">
-              <h4 class="skill__title title">.skills<span class="purpe__span">()</span></h4>
-              <div class="container__litle">
-                <div class="progress_item">
-                  <h3 class="skill__title-text">HTML, CSS</h3>
-                  <div class="progress">
-                    <div class="progress__bar"></div>
-                  </div>
-                </div>
-                <div class="progress_item">
-                  <h3 class="skill__title-text">Javascript</h3>
-                  <div class="progress">
-                    <div class="progress__bar"></div>
-                  </div>
-                </div>
-                <div class="progress_item">
-                  <h3 class="skill__title-text">Figma, Ps</h3>
-                  <div class="progress">
-                    <div class="progress__bar"></div>
-                  </div>
-                </div>
-                <div class="progress_item">
-                  <h3 class="skill__title-text">Frameworks</h3>
-                  <div class="progress">
-                    <div class="progress__bar"></div>
-                  </div>
+            <div class="project">
+              <div class="container">
+                <div class="project__inner">
+                  <h2 class="project__title">
+                    project <span>()</span>
+                  </h2>   
                 </div>
               </div>
             </div>
           </div>
-        </section>
-      </div>
-      <div class="section">
-        <section class="contact">
-          <div class="container">
-            <div class="contact__inner">
-              <h5 class="contact__title title">.contact me<span class="purpe__span">()</span></h5>
-              <form class="form" action="">
-                <input class="form__text _req" type="text" placeholder=".your name"  />
-                <input class="form__text _req" type="email" placeholder=".your email"/>
-                <textarea class="form__text _req" name="" id="" cols="30" rows="10"></textarea>
-                <button type="submit" class="main__btn" ><>.send</button>
-              </form>
-            </div>
-          </div>
-        </section>
-      </div>
-    </div>
+        </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"
       integrity="sha512-gSf3NCgs6wWEdztl1e6vUqtRP884ONnCNzCpomdoQ0xXsk06lrxJsR7jX5yM/qAGkPGsps+4bLV5IEjhOZX+gg=="
