--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
     <title>MY</title>
   </head>
   <body>
-        <header class="header">
+    <div id="fullpage">
+        <header class="header section">
           <div class="container">
             <div class="header__inner">
               <a class="header__logo">bn()</a>
               <nav class="header__nav">
                 <ul>
                   <li><a class="link" href="">projects()</a></li>
-                  <li><a class="link" href="">skills() </a></li>
-                  <li><a class="link" href="">contact() </a></li>
                   <li>
                     <a target="_blank"
                       class="link__social"
@@ -52,10 +51,11 @@
               </nav>
             </div>
           </header>
-          <div class="main slide">
+          <div class="main">
             <div class="container">
               <div class="main__inner">
-              <h2 class="main__title">.frontend developer<span class="purpe__span">()</span></h2>
+              <h2 class="main__title">
+                frontend developer<span class="purpe__span">()</span></h2>
               <p class="main__text">
                 .Hi,my name is Bohdan <br />
                 .i am creative developer from Ukraine()
@@ -68,17 +68,23 @@
                 </div>
               </div>
             </div>
-            <div class="project">
+            <div class="project section">
               <div class="container">
                 <div class="project__inner">
                   <h2 class="project__title">
-                    project <span>()</span>
-                  </h2>   
+                    project<span class="purpe__span">()</span>
+                  </h2>
+                  <div class="project__items">
+                    <div class="project__item">
+                      <h3 class="project__name"></h3>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"
       integrity="sha512-gSf3NCgs6wWEdztl1e6vUqtRP884ONnCNzCpomdoQ0xXsk06lrxJsR7jX5yM/qAGkPGsps+4bLV5IEjhOZX+gg=="
