--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <title>MY</title>
   </head>
   <body>
-    <div id="fullpage">
-        <header class="header section">
+        <header class="header">
           <div class="container">
             <div class="header__inner">
               <a class="header__logo">bn()</a>
@@ -68,7 +67,7 @@
                 </div>
               </div>
             </div>
-            <div class="project section">
+            <div class="project">
               <div class="container">
                 <div class="project__inner">
                   <h2 class="project__title">
@@ -84,7 +83,6 @@
             </div>
           </div>
         </div>
-      </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"
       integrity="sha512-gSf3NCgs6wWEdztl1e6vUqtRP884ONnCNzCpomdoQ0xXsk06lrxJsR7jX5yM/qAGkPGsps+4bLV5IEjhOZX+gg=="
