--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -1,21 +1,32 @@
-<div class="project">
-	<div class="container">
-	  <div class="project__inner">
-		<h2 class="project__title">
-		  project<span class="purpe__span">()</span>
-		</h2>
-		<div class="project__items">
-		  <div class="project__item">
-			<h3 class="project__name">react to do list</h3>
-			<img src="" alt="">
-			<a class="project__link" target="_blank" href="https://rococo-empanada-066e59.netlify.app/">go</a>
-		  </div>
-		  <div class="project__item">
-			<h3 class="project__name">tips calculator app</h3>
-			<img src="" alt="">
-			<a class="project__link" target="_blank" href="https://stirring-tulumba-09fe93.netlify.app/">go</a>
-		  </div>
-		</div>
-	  </div>
-	</div>
+
+<section id='projects'class="project">
+  <div class="container">
+    <div class="project__inner">
+      <h2 class="project__title">myProject<span class="purpe__span">()</span></h2>
+      <div class="project__items">
+        <div class="project__item">
+          <h3 class="project__name">react to do list</h3>
+          <img src="" alt="" />
+          <a
+            class="project__link"
+            target="_blank"
+            href="https://rococo-empanada-066e59.netlify.app/"
+            >go</a
+          >
+        </div>
+        <div class="project__item">
+          <h3 class="project__name">tips calculator app</h3>
+          <img src="" alt="" />
+          <a
+            class="project__link"
+            target="_blank"
+            href="https://stirring-tulumba-09fe93.netlify.app/"
+            >go</a
+          >
+        </div>
+      </div>
+    </div>
   </div>
+</<section>
+  
+
