--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  @@include('html/head.html', {
-    'title': 'my'
-  })
+  @@include('html/head.html', { 'title': 'my' })
   <body>
-      @@include('html/header.html', {})
-      @@include('html/main.html', {})
-      @@include('html/projects.html', {})
+    @@include('html/header.html', {}) @@include('html/main.html', {})
+    @@include('html/projects.html', {})
     <script src="js/app.min.js"></script>
   </body>
-</html> 
+</html>
